# caffeinated-website

./: .gitignore  1  package-lock.json  package.json  svelte.config.js
backend/: Cargo.toml  plans.txt
backend/src/: database.rs  main.rs  models.rs  routes.rs
backend/src/routes/: login.rs  new_user.rs  posts.rs
src/: BlogPost.svelte  STL.svelte  store.ts
src/routes/: +layout.svelte  +page.svelte  Header.svelte  Profile.svelte  styles.scss
src/routes/blog/: +page.svelte  +page.ts
src/routes/member/: +page.svelte
src/routes/robot/: +page.svelte
src/routes/sponsors/: +page.svelte
