[package]
name = "mocha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
dashmap = "5.4.0"
blake3 = "1.3.3"
tokio = { version = "1.22.0", features = ["sync"] }
notion = "0.4.1"
